--- a/.github/workflows/full_suite_integration_tests.yml
+++ b/.github/workflows/full_suite_integration_tests.yml
@@ -153,24 +153,11 @@ jobs:
           ./gradlew :flank-scripts:download
           echo "./flank-scripts/bash" >> $GITHUB_PATH
 
-      - name: Prepare run styate JSON
-        id: state-json
-        run: |
-          STATE_JSON='{
-            "windows-latest": "${{ env.windows-latest }}",
-            "windows-latest-bs": "${{ env.windows-latest-bs }}",
-            "ubuntu-latest": "${{ env.ubuntu-latest }}",
-            "ubuntu-latest-bs": "${{ env.ubuntu-latest-bs }}",
-            "macos-latest": "${{ env.macos-latest }}",
-            "macos-latest-bs": "${{ env.macos-latest-bs }}"
-          }'
-          echo "::set-output name=run-state::$STATE_JSON"
-
       - name: Process IT results
         run: |
           flankScripts integration_tests process_results \
           --global-result=${{ needs.run-it-full-suite.outputs.job_status }} \
-          --run-result=${{ steps.state-json.outputs.run-state }} \
+          --run-result=${{ env }} \
           --github-token=${{ secrets.GITHUB_TOKEN }} \
           --run-id=${{ github.run_id }}
 
